--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             document.write('Параметр message не указан.');
         } else {
             // Выводим приветственное сообщение
-            document.write('Hello ' + name + '! ' + message);
+            document.write('Hello ' + name + ' ' + message);
         }
     </script>
 </body>
