--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             document.write('Необходимо передать все параметры.');
         } else {
             // Выводим приветственное сообщение
-            document.write('Hello ' + name + ' ' + message);
+            document.write('Hello ' + name + '! ' + message + '!');
         }
     </script>
 </body>
